fix: User model and service expanded