@@ -8,27 +8,37 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+
+
 @Service
 public class UserService {
 
-    // Simulates database connection
     private final List<User> userList;
 
     public UserService() {
         userList = new ArrayList<>();
-        User user1 = new User(1, "Johan");
-        User user2 = new User(2, "Jane");
-        userList.addAll(Arrays.asList(user1, user2));
+        userList.add(new User(1, "Johan", List.of("Action"), List.of("Dishonored", "Batman"), List.of(2, 3)));
+        userList.add(new User(2, "Jane", List.of("Puzzle", "RPG"), List.of("Portal"), List.of(4, 5)));
     }
 
     public Optional<User> getUser(Integer id) {
-        Optional<User> optional = Optional.empty();
-        for (User user : userList) {
-            if (id.equals(user.getId())) {
-                optional = Optional.of(user);
-                return optional;
-            }
+        return userList.stream()
+                .filter(user -> user.getId() == id)
+                .findFirst();
+    }
+
+    public Optional<User> newUser(String username) {
+        if (userList.stream().anyMatch(user -> user.getUsername().equalsIgnoreCase(username))) {
+            return Optional.empty(); 
         }
-        return optional;
+
+        // Generate a new unique id for now, but we will have to connect to database!
+        int newId = userList.size() + 1;
+
+        User newUser = new User(newId, username, List.of(), List.of(), List.of());
+
+        userList.add(newUser);
+
+        return Optional.of(newUser);
     }
 }
